# ai_module

./: .gitignore  .gitignore.save
data/0/pose/: 0000.json  0001.json  0002.json  0003.json  0004.json
data/1/pose/: 0000.json  0001.json  0002.json  0003.json
data/10/pose/: 0000.json  0001.json  0002.json
data/2/pose/: 0000.json  0001.json  0002.json  0003.json  0004.json
data/3/pose/: 0000.json  0001.json  0002.json  0003.json
data/4/pose/: 0000.json  0001.json  0002.json  0003.json  0004.json
data/5/pose/: 0000.json  0001.json  0002.json  0003.json
data/6/pose/: 0000.json  0002.json  0003.json  0004.json
data/7/pose/: 0000.json  0001.json  0002.json  0003.json
data/8/pose/: 0000.json  0001.json  0002.json  0003.json  0004.json
data/9/pose/: 0000.json  0001.json  0002.json  0003.json  0004.json
devel/lib/pkgconfig/: SGG.pc  depth_camera.pc
src/captioning/: CMakeLists.txt  package.xml
src/captioning/launch/: captioning.launch
src/captioning/output/: merged_sg_0_with_captions.json  merged_sg_1_with_captions.json  merged_sg_2_with_captions.json  merged_sg_3_with_captions.json  merged_sg_4_with_captions.json  merged_sg_5_with_captions.json
src/captioning/src/: captioning_node.py
src/captioniong/: CMakeLists.txt
src/captioniong/src/: captioning_node.py
src/gemini_API/: CMakeLists.txt  package.xml  readme
src/gemini_API/launch/: gemini_api.launch
src/gemini_API/scripts/: orchestrator.py
src/gemini_API/src/: answer_numerical.py  collect_images_per_node.py
src/reltr_scene_graph/: .gitignore  README.md
(+86 files in other folders)
